<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/assignment_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <EditText
        android:id="@+id/newAssignmentName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/assignmentNameFormHint"
        android:inputType="textPersonName" />

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/newAssignmentName"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/deadlinelabel"
            android:textColor="#000000"
            android:textSize="@dimen/formTextSize" />

        <TextView
            android:id="@+id/submitDate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="November 15, 2016"
            android:textSize="15sp"
            tools:ignore="HardcodedText" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/linearlayout"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/deadlinelabel2"
            android:textColor="#000000"
            android:textSize="@dimen/formTextSize" />

        <TextView
            android:id="@+id/submitTime"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="12.00"
            android:textSize="15sp"
            tools:ignore="HardcodedText" />

    </LinearLayout>

    <View
        android:id="@+id/dividerAssignmentForm"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/linearlayout2"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/dividerAssignmentForm"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:gravity="top|left"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        tools:ignore="RtlHardcoded" />

</RelativeLayout>
