<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_course_description"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_course_description">

    <LinearLayout
        android:id="@+id/learntimeDescLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/learntimeFormLabel"
            android:textAlignment="center"
            android:textSize="@dimen/formTextSize" />

        <TextView
            android:id="@+id/learntimedata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:text="learntimedata"
            android:textSize="@dimen/formTextSize"
            tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/testtimeDescLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/learntimeDescLabel"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/TesttimeFormLabel"
            android:textAlignment="center"
            android:textSize="@dimen/formTextSize" />

        <TextView
            android:id="@+id/testtimedata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:text="learntimedata"
            android:textSize="@dimen/formTextSize"
            tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry" />

    </LinearLayout>

    <View
        android:id="@+id/dividerCourseDesc"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/testtimeDescLabel"
        android:layout_marginBottom="@dimen/dividerMargin"
        android:layout_marginTop="@dimen/dividerMargin"
        android:background="@android:color/darker_gray" />


    <TextView
        android:id="@+id/courseDescLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dividerCourseDesc"
        android:padding="@dimen/dividerMargin"
        android:text="@string/courseDesc"
        android:textSize="@dimen/formTextSize" />

    <TextView
        android:id="@+id/courseDescData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/courseDescLabel"
        android:padding="@dimen/dividerMargin"
        android:text="test\ndescription"
        android:textSize="@dimen/formTextSize"
        tools:ignore="HardcodedText" />

    <View
        android:id="@+id/dividerCourseDesc2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/courseDescData"
        android:layout_marginBottom="@dimen/dividerMargin"
        android:layout_marginTop="@dimen/dividerMargin"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/assignmentlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/dividerCourseDesc2"
        android:text="@string/assignment"
        android:textAlignment="center"
        android:textSize="@dimen/formTextSize" />

    <View
        android:id="@+id/dividerCourseDesc3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/assignmentlabel"
        android:layout_marginBottom="@dimen/dividerMargin"
        android:layout_marginTop="@dimen/dividerMargin"
        android:background="@android:color/darker_gray" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/assignmentRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/dividerCourseDesc3" />

</RelativeLayout>